# StableVerse

./: .gitignore  CMakeLists.txt  README.md  README_CN.MD
assets/: 2025_07_23_11_18_16_seed_18467.json  250723_143755_seed_6334.json  250723_162712_seed_19169.json
cmake_Kelvin/: ProjectSsetting.cmake
common/: commandparser.cpp  commandstring.cpp  commandstring.h  inferPlugin.h  main.cpp  utility.cpp
core/: openservice.h
gui/: fancycombobox.cpp  fancycombobox.h  fancygraphicsview.cpp  fancygraphicsview.h  mainwindow.cpp  mainwindow.h  mainwindow.ui
include/common/: commandparser.h  common.h  interface.h  utility.h
resource/: resource.qrc  resources.rc
resource/icon/: svg2ico.py
translations/: en_us.ts  zh_cn.ts  zh_tw.ts
